[package]
name = "hors"
version = "0.9.0"
authors = ["Luxter77 <19197331+Luxter77@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.9"
regex = "1"
argparse = "0.2.2"
globwalk = "0.8.1"
alphanumeric-sort = "1.4.0"
